# kazakh-aliexpress-grpc

./: .env.development  .env.example  .env.production  Makefile  docker-compose.dev.yml
auth_service/: go.mod  go.sum
auth_service/internal/app/grpc/: app.go
auth_service/internal/domain/entities/: user.go
auth_service/internal/grpc/auth/: server.go
auth_service/internal/lib/jwt/: jwt.go
auth_service/internal/repository/: user.go
auth_service/internal/services/auth/: auth.go
auth_service/pkg/storage/mongo/: mongo.go
protos/: auth.proto  cart.proto  product.proto
services/auth/: Dockerfile  Makefile  go.mod  go.sum
services/auth/cmd/auth/: main.go
services/auth/config/: local.yaml
services/auth/internal/app/: app.go
services/auth/internal/config/: config.go
services/auth/internal/repository/: user.go
services/auth/pkg/storage/: storage.go
services/cart/: Dockerfile  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  cart_pb2.py  cart_pb2.pyi  cart_pb2_grpc.py  cart_server.py  config.py  models.py  product_pb2.py  product_pb2.pyi  product_pb2_grpc.py  pyproject.toml  server.py
services/cart/db/: mongodb.py
services/cart/grpc_proto/auth/: auth_pb2_grpc.py
services/cart/grpc_proto/cart/: cart_pb2.py  cart_pb2.pyi  cart_pb2_grpc.py
services/cart/grpc_proto/product/: product_pb2_grpc.py
services/cart/repositories/: cart.py
services/product/: Dockerfile  Makefile  go.mod  go.sum
services/product/cmd/product/: main.go
services/product/config/: local.yaml
services/product/internal/app/: app.go
services/product/internal/config/: config.go
(+18 files in other folders)
